--- a/index.html
+++ b/index.html
@@ -610,8 +610,8 @@
   <!-- BLOG (Medium placeholders) -->
   <section id="blog" class="py-12">
     <div class="container">
-      <h2 class="text-3xl font-bold mb-6 text-center" style="color:var(--text)">Blog — Selected Articles</h2>
-      <p class="muted text-center mb-8">Short previews of your Medium articles about robotics. Replace the placeholders with your real Medium titles, images and links.</p>
+      <h2 class="text-3xl font-bold mb-6 text-center" style="color:var(--text)">Personal Blog</h2>
+      <p class="muted text-center mb-8">I write blogs to share lessons, mistakes, and breakthroughs. My goal is to make learning smoother for aspiring roboticists and inspire them to push through the same challenges I once faced.</p>
 
       <div class="blog-grid">
         <!-- Repeat these 6 placeholders and update href/src/text as needed -->
@@ -620,7 +620,7 @@
           <div class="p-4">
             <h3 class="font-semibold">Hands on SLAM Frontend: Landmark Lifecycle</h3>
             <p class="muted text-sm mt-1">In Part 1, I walked through my early experiments with feature detection, matching, and triangulation. I asked a question: if triangulation works so well, why not just keep doing it forever between consecutive frames? ... </p>
-            <a href="#" class="mt-3 inline-block text-[var(--accent)] hover:underline">Read on Medium →</a>
+            <a href="https://medium.com/@siddharthramasushil/hands-on-slam-frontend-part-2-d16ba9902987" class="mt-3 inline-block text-[var(--accent)] hover:underline">Read on Medium →</a>
           </div>
         </article>
 
@@ -629,7 +629,7 @@
           <div class="p-4">
             <h3 class="font-semibold">Hands-On SLAM: My Experience Building a Visual Frontend Pipeline</h3>
             <p class="muted text-sm mt-1">You’re staring at a research paper about SLAM, and there’s this intimidating diagram with boxes labelled “Bundle Adjustment,” “Loop Closure,” “Pose Graph Optimisation.” Your brain immediately goes into overwhelm mode. Where do you even start? ...</p>
-            <a href="#" class="mt-3 inline-block text-[var(--accent)] hover:underline">Read on Medium →</a>
+            <a href="https://medium.com/@siddharthramasushil/frontend-slam-the-essential-struggles-every-beginner-needs-ecca3532e821" class="mt-3 inline-block text-[var(--accent)] hover:underline">Read on Medium →</a>
           </div>
         </article>
 
@@ -638,7 +638,7 @@
           <div class="p-4">
             <h3 class="font-semibold">Demystifying SVD: The Math Powering Visual SLAM</h3>
             <p class="muted text-sm mt-1">Singular Value Decomposition sounds intimidating, but it’s actually one of the most powerful and practical tools that helps robots understand what they’re seeing. Think of it as a mathematical Swiss Army knife that solves many of the core problems in robot vision...</p>
-            <a href="#" class="mt-3 inline-block text-[var(--accent)] hover:underline">Read on Medium →</a>
+            <a href="https://medium.com/@siddharthramasushil/math-that-helps-robots-see-svd-ed2967e5ed59" class="mt-3 inline-block text-[var(--accent)] hover:underline">Read on Medium →</a>
           </div>
         </article>
 
@@ -647,7 +647,7 @@
           <div class="p-4">
             <h3 class="font-semibold">Epipolar Geometry in Practice: Build, Visualize, Understand</h3>
             <p class="muted text-sm mt-1">I built a tiny C++/OpenCV repo you can run locally to feel epipolar geometry instead of just reading about it...</p>
-            <a href="#" class="mt-3 inline-block text-[var(--accent)] hover:underline">Read on Medium →</a>
+            <a href="https://medium.com/@siddharthramasushil/epipolar-geometry-in-practice-build-visualize-understand-384959ecf69c" class="mt-3 inline-block text-[var(--accent)] hover:underline">Read on Medium →</a>
           </div>
         </article>
 
@@ -656,7 +656,7 @@
           <div class="p-4">
             <h3 class="font-semibold">Foundations of Robot Perception: A Beginner’s Guide to the Math</h3>
             <p class="muted text-sm mt-1">When you’re building a robot that needs to see the world, you’re basically asking it to solve puzzles like: “Where is that object in 3D space based on what I see in this 2D camera image?” ...“How did the robot move between these two camera shots?”</p>
-            <a href="#" class="mt-3 inline-block text-[var(--accent)] hover:underline">Read on Medium →</a>
+            <a href="https://medium.com/@siddharthramasushil/the-math-that-makes-robots-see-a-fellow-beginners-guide-to-computer-vision-math-pa-6f9a870fddec" class="mt-3 inline-block text-[var(--accent)] hover:underline">Read on Medium →</a>
           </div>
         </article>
 
@@ -665,7 +665,7 @@
           <div class="p-4">
             <h3 class="font-semibold">Building a Robust Plane Segmentation Pipeline for 3D Pose Estimation in Robotics</h3>
             <p class="muted text-sm mt-1">When working on industrial automation systems, flashy CV models and deep learning pipelines often get the spotlight. But sometimes, it’s the quieter, lower-level problems — like reliably extracting a plane from a noisy point cloud — that make or break a robotic system...</p>
-            <a href="#" class="mt-3 inline-block text-[var(--accent)] hover:underline">Read on Medium →</a>
+            <a href="https://medium.com/@siddharthramasushil/building-a-robust-plane-segmentation-pipeline-for-3d-pose-estimation-in-robotics-cb89243492fb" class="mt-3 inline-block text-[var(--accent)] hover:underline">Read on Medium →</a>
           </div>
         </article>
 
